# live-chat

./: .gitignore  CMakeLists.txt  README.md  compile_flags.txt
src/apps/: ChatServer.cpp  ClientApp.cpp
src/gui/: ChatWindow.cpp  ChatWindow.h  MyTextEdit.cpp  MyTextEdit.h
src/libs/Models/: Message.cpp  Message.h  User.h
src/libs/Network/: Consumer.cpp  Consumer.h  Producer.cpp  Producer.h
